--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   firebase_storage: ^12.1.0
   firebase_auth: ^5.1.1
   cloud_firestore: ^5.0.2
-  fluttertoast: ^8.2.6
+  another_flushbar: ^1.12.30
+  provider: ^6.1.2
+  
 
 dev_dependencies:
   flutter_test:
