--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,9 +24,18 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace = "com.example.expanse_tracker_flutter"
+    namespace = "com.expanse_tracker_flutter"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
+    
+    signingConfigs {
+        debug {
+            storeFile file('C:/Users/hasna/.android/debug.keystore')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+        }
+    }
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
@@ -34,7 +43,7 @@ android {
     }
 
     defaultConfig {
-        applicationId = "com.example.expanse_tracker_flutter"
+        applicationId = "com.expanse_tracker_flutter"
         minSdk 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
@@ -62,5 +71,6 @@ configurations.all {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.22"
+    
     // Add other dependencies
 }
