--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^5.0.2
   another_flushbar: ^1.12.30
   provider: ^6.1.2
+  curved_navigation_bar: ^1.0.6
   
 
 dev_dependencies:
