--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   another_flushbar: ^1.12.30
   provider: ^6.1.2
   curved_navigation_bar: ^1.0.6
+  flutter_slidable: ^3.1.0
+  intl: ^0.19.0
+  fl_chart: ^0.68.0
   
 
 dev_dependencies:
