--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_slidable: ^3.1.0
   intl: ^0.19.0
   fl_chart: ^0.68.0
+  excel: ^4.0.3
+  path_provider: ^2.1.3
   
 
 dev_dependencies:
