updated packes version.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,7 +27,7 @@ android {
     namespace = "com.expanse_tracker_flutter"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
-    
+
     signingConfigs {
         debug {
             storeFile file('C:/Users/hasna/.android/debug.keystore')
@@ -38,13 +38,17 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_17 // Update to Java 17
+        targetCompatibility = JavaVersion.VERSION_17 // Update to Java 17
+    }
+
+    kotlinOptions {
+        jvmTarget = "17" // Ensure Kotlin targets Java 17
     }
 
     defaultConfig {
         applicationId = "com.expanse_tracker_flutter"
-        minSdk 23
+        minSdk = 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
@@ -71,6 +75,4 @@ configurations.all {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.22"
-    
-    // Add other dependencies
 }
