--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   fl_chart: ^0.68.0
   flutter_spinkit: ^5.2.1
   flutter_floating_bottom_bar: ^1.2.1+1
+  page_transition: ^2.2.1
   
  
   
